# hayate-linux-fileview

./: Cargo.toml  DESIGN.md  IMPLEMENTATION_REPORT.md
src/: breadcrumb.rs  config.rs  context_handler.rs  entry.rs  file_list.rs  file_ops.rs  keybindings.rs  lru_cache.rs  main.rs  preview.rs  rename_ui.rs  scroll.rs  sidebar.rs  state.rs  status_bar.rs  tab_bar.rs  terminal_pty.rs  terminal_state.rs  terminal_widget.rs  three_pane.rs  three_pane_tests.rs  two_pane.rs  watcher.rs
workspace/: e5_terminal_design.md
