[package]
name = "hayate-linux-fileview"
version = "0.1.0"
edition = "2024"
description = "Fast file viewer for Linux — built on Hayate UI"
license = "MIT OR Apache-2.0"

[dependencies]
hayate-ui = { path = "../GUI_kit" }
cosmic-text = "0.18"
xkbcommon = { version = "0.8", features = ["wayland"] }
libc = "0.2"
tiny-skia = "0.11"
unicode-width = "0.2"
