[package]
name = "hayate-linux-fileview"
version = "0.1.0"
edition = "2024"
description = "Fast file viewer for Linux — built on Hayate UI"
license = "MIT OR Apache-2.0"

[dependencies]
hayate-kit = { path = "../GUI_kit/crates/hayate-kit" }
cosmic-text = "0.18"
xkbcommon = { version = "0.8", features = ["wayland"] }
libc = "0.2"
tiny-skia = "0.11"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
unicode-width = "0.2"
vte = "0.15"

[dev-dependencies]
tempfile = "3"
